--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:root@db:3306/chat"
+GRPC_SERVER_URL="http://jarvis:50052"
