--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.1",
     "jest": "^29.5.0",
+    "prisma": "^4.13.0",
     "ts-node": "^10.9.1"
   }
 }
