--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -8,7 +8,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-  
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3.5.2
@@ -19,7 +19,7 @@ jobs:
           username: ${{secrets.DOCKER_USERNAME}}
           password: ${{secrets.DOCKER_PASSWORD}}
           repository: ${{secrets.DOCKER_USERNAME}}/jarvis-bff
-          tags: ${{github.sha}}, latest
+          tags: ${{github.sha}} --pretty=%h, latest
 
       - name: Setup Kustomize
         uses: imranismail/setup-kustomize@v1
