--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -19,7 +19,7 @@ jobs:
           username: ${{secrets.DOCKER_USERNAME}}
           password: ${{secrets.DOCKER_PASSWORD}}
           repository: ${{secrets.DOCKER_USERNAME}}/jarvis-bff
-          tags: ${{github.sha}} --pretty=%h, latest
+          tags: ${{github.sha --pretty=%h}}, latest
 
       - name: Setup Kustomize
         uses: imranismail/setup-kustomize@v1
