--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -13,13 +13,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3.5.2
 
+      - name: Get short SHA
+        id: short-sha
+        run: echo "::set-output name=value::$(echo ${GITHUB_SHA} | cut -c1-7)"
+
       - name: Build and push image to Dockerhub
         uses: docker/build-push-action@v1.1.0
         with:
           username: ${{secrets.DOCKER_USERNAME}}
           password: ${{secrets.DOCKER_PASSWORD}}
           repository: ${{secrets.DOCKER_USERNAME}}/jarvis-bff
-          tags: ${{github.sha --pretty=%h}}, latest
+          tags: ${{steps.short-sha.outputs.value}}, latest
 
       - name: Setup Kustomize
         uses: imranismail/setup-kustomize@v1
