--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -13,17 +13,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3.5.2
 
-      - name: Get short SHA
-        id: short-sha
-        run: echo "::set-output name=value::$(echo ${GITHUB_SHA} | cut -c1-7)"
-
       - name: Build and push image to Dockerhub
         uses: docker/build-push-action@v4
         with:
           username: ${{secrets.DOCKER_USERNAME}}
           password: ${{secrets.DOCKER_PASSWORD}}
           repository: ${{secrets.DOCKER_USERNAME}}/jarvis-bff
-          tags: ${{steps.short-sha.outputs.value}}, latest
+          tags: ${{github.sha}}, latest
 
       - name: Setup Kustomize
         uses: imranismail/setup-kustomize@v1
