--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -13,13 +13,24 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3.5.2
 
-      - name: Build and push image to Dockerhub
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          username: ${{secrets.DOCKER_USERNAME}}
-          password: ${{secrets.DOCKER_PASSWORD}}
-          repository: ${{secrets.DOCKER_USERNAME}}/jarvis-bff
-          tags: ${{github.sha}}, latest
+          context: .
+          push: true
+          tags: ${{secrets.DOCKER_USERNAME}}/jarvis-bff:${{github.sha}}, ${{secrets.DOCKER_USERNAME}}/jarvis-bff:latest
 
       - name: Setup Kustomize
         uses: imranismail/setup-kustomize@v1
