--- a/k8s/jarvis-bff-default-networkpolicy.yaml
+++ b/k8s/jarvis-bff-default-networkpolicy.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: jarvis-default
+  name: jarvis-bff-default
 spec:
   ingress:
     - from:
