--- a/k8s/jarvis-bff-claim0-persistentvolumeclaim.yaml
+++ b/k8s/jarvis-bff-claim0-persistentvolumeclaim.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   labels:
-    io.kompose.service: app-claim0
-  name: app-claim0
+    io.kompose.service: jarvis-bff-claim0
+  name: jarvis-bff-claim0
 spec:
   accessModes:
     - ReadWriteOnce
