--- a/k8s/jarvis-bff-service.yaml
+++ b/k8s/jarvis-bff-service.yaml
@@ -5,13 +5,12 @@ metadata:
     kompose.cmd: kompose convert
     kompose.version: 1.28.0 (HEAD)
   labels:
-    io.kompose.service: app
-  name: app
+    io.kompose.service: jarvis-bff
+  name: jarvis-bff
 spec:
   ports:
     - name: "3000"
       port: 3000
       targetPort: 3000
   selector:
-    io.kompose.service: app
-
+    io.kompose.service: jarvis-bff
