--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -2,14 +2,14 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- app-claim0-persistentvolumeclaim.yaml
-- app-deployment.yaml
-- app-service.yaml
-- db-claim0-persistentvolumeclaim.yaml
-- db-deployment.yaml
-- jarvis-bff-default-networkpolicy.yaml
+  - jarvis-bff-claim0-persistentvolumeclaim.yaml
+  - jarvis-bff-deployment.yaml
+  - jarvis-bff-service.yaml
+  - db-claim0-persistentvolumeclaim.yaml
+  - db-deployment.yaml
+  - jarvis-bff-default-networkpolicy.yaml
 
 images:
-- name: jarvis
-  newName: lucasgoisdev/jarvis-bff
-  newTag: 6e5ba249dd5fe74fd1ff8a4c72560b6acb4d8666
+  - name: jarvis-bff
+    newName: lucasgoisdev/jarvis-bff
+    newTag: 6e5ba249dd5fe74fd1ff8a4c72560b6acb4d8666
